--- a/Resources/views/macros.html.twig
+++ b/Resources/views/macros.html.twig
@@ -1,7 +1,11 @@
-{% macro time(time, format) -%}
-    <time datetime="{{ time.format(constant('DateTime::ISO8601')) }}">{{ time | locale_datetime(format) }}</time>
+{% macro time(date) -%}
+    <time datetime="{{ date.format(constant('DateTime::ISO8601')) }}">{{ date | oro_format_time }}</time>
 {%- endmacro %}
 
-{% macro date(time, format) -%}
-    <time datetime="{{ time.format(constant('DateTime::ISO8601')) }}">{{ time | locale_date(format) }}</time>
+{% macro date(date) -%}
+    <time datetime="{{ date.format(constant('DateTime::ISO8601')) }}">{{ date | oro_format_date }}</time>
+{%- endmacro %}
+
+{% macro datetime(date) -%}
+    <time datetime="{{ date.format(constant('DateTime::ISO8601')) }}">{{ date | oro_format_datetime }}</time>
 {%- endmacro %}
