--- a/Resources/views/locale_settings.html.twig
+++ b/Resources/views/locale_settings.html.twig
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-require(['oro/locale-settings'],
+require(['oro/locale-settings', 'jquery'],
 function(localeSettings) {
     {% set settings = {
         'system': {
@@ -17,10 +17,40 @@ function(localeSettings) {
             'locale': oro_config_value('oro_locale.locale'),
             'timezone': oro_config_value('oro_locale.timezone'),
             'country': oro_config_value('oro_locale.country')
+        },
+        'locale': oro_config_value('oro_locale.locale'),
+        'timezone': oro_config_value('oro_locale.timezone'),
+        'country': oro_config_value('oro_locale.country'),
+        'calendar': {
+            'dow': {
+                'wide':        oro_calendar_day_of_week_names('wide'),
+                'abbreviated': oro_calendar_day_of_week_names('abbreviated'),
+                'short':       oro_calendar_day_of_week_names('short'),
+                'narrow':      oro_calendar_day_of_week_names('narrow'),
+            },
+            'months': {
+                'wide':        oro_calendar_month_names('wide'),
+                'abbreviated': oro_calendar_month_names('abbreviated'),
+                'narrow':      oro_calendar_month_names('narrow'),
+            },
+            'first_dow': oro_calendar_first_day_of_week()
         }
     } %}
     var settings = {{ settings|json_encode|raw }};
     settings.user.format = {name: {}};
+
+    // Convert to js representation as an array with first index 0
+    settings.calendar.first_dow          = settings.calendar.first_day_of_week - 1;
+
+    settings.calendar.dow.wide           = $.map(settings.calendar.dow.wide, function(v) {return v});
+    settings.calendar.dow.abbreviated    = $.map(settings.calendar.dow.abbreviated, function(v) {return v});
+    settings.calendar.dow.short          = $.map(settings.calendar.dow.short, function(v) {return v});
+    settings.calendar.dow.narrow         = $.map(settings.calendar.dow.narrow, function(v) {return v});
+
+    settings.calendar.months.wide        = $.map(settings.calendar.months.wide, function(v) {return v});
+    settings.calendar.months.abbreviated = $.map(settings.calendar.months.abbreviated, function(v) {return v});
+    settings.calendar.months.narrow      = $.map(settings.calendar.months.narrow, function(v) {return v});
+
     settings.user.format.name[settings.user.locale]
         = {{ oro_config_value('oro_locale.name_format')|json_encode|raw }};
     localeSettings.extendSettings(settings);
