CRM-3268: Use shortened dates (e.g. on emails) for activities.  - Implemented smart date format in javascript.  - Added day date format to format converter.  - Added default day format to locale settings.  - Updated locale settings to pull new day format form converter.  - Updated tests

--- a/Resources/views/locale_settings.html.twig
+++ b/Resources/views/locale_settings.html.twig
@@ -4,6 +4,7 @@ function($, localeSettings) {
     {% set dateTimeFormats = {} %}
     {% for formatterName in oro_datetime_formatter_list() %}
         {% set currentFormats = {
+            'day': oro_day_format(formatterName),
             'date': oro_date_format(formatterName),
             'time': oro_time_format(formatterName),
             'datetime': oro_datetime_format(formatterName),
