BAP-11420: Prevent disable of the latest language BAP-11411: Update system configuration for languages  - restored system configuration  - updated language form type and unit tests  - added js components for language options in system configuration  - improved operation configuration to prevent deletion English language

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -76,3 +76,19 @@
     {{ form_widget(form.ids) }}
     {{ form_errors(form.ids) }}
 {% endblock %}
+
+{% block _language_settings_oro_locale___language_value_widget %}
+    <span data-page-component-module="oroui/js/app/components/view-component"
+       data-page-component-options="{{ {view: 'orolocale/js/app/views/language-select-view'}|json_encode }}"
+    >
+        {{ form_widget(form) }}
+    </span>
+{% endblock %}
+
+{% block _language_settings_oro_locale___languages_value_widget %}
+    <span data-page-component-module="oroui/js/app/components/view-component"
+          data-page-component-options="{{ {view: 'orolocale/js/app/views/languages-select-view'}|json_encode }}"
+    >
+        {{ form_widget(form) }}
+    </span>
+{% endblock %}
