OEE-962: Choose currency when creating an Opportunity (#2615)
- Added new bundle MultiCurrencyBundle
- Added display currency setting
- Added migration for opportunity for fill currencies
- Added new interface and class for get data from system config
- Migrate MultiCurrencyBundle from OroPro namespace to Oro namespace
- Introduced new param for system configuration to be able use different form types in different scopes
- Refactor CurrencyTypes to be able fetching data from new settings
- Added new interface and class for get data from system config
- added inline editing for Budget amount currency column
- Added config options for currency view
- updated Opportunity entity for save multicurrency field
- Update datagrid according new service structure
- Introduced new helper to be a facade for view manipulations with currencies
- Add new provider interfaces to make functionality more extendable
- Add extra properties for currency collection: code, symbol, name. So we can render them in grid
- Added check for js if currency is only one and if true, don't displayed select2
- Fixed getValue method when select2 isn't init and method returned incorrect value that trigger validation error
- New doctrine type currency was introduced. To be more expressive and can detect it in code.
- Type guesser was created to setup correct options in report's grid
- Introduced new filter type for multi currency fields.
- Updated auditable map to support currency type (new type - new mapping)

--- a/Resources/views/locale_settings.html.twig
+++ b/Resources/views/locale_settings.html.twig
@@ -39,11 +39,12 @@ function($, localeSettings) {
     {% endfor %}
 
     {% set localeConfigurationClass = '\\Oro\\Bundle\\LocaleBundle\\DependencyInjection\\Configuration::' %}
+    {% set currencyConfigurationClass = '\\Oro\\Bundle\\CurrencyBundle\\DependencyInjection\\Configuration::' %}
     {% set defaults = {
         'locale':   constant(localeConfigurationClass ~ 'DEFAULT_LOCALE'),
         'language': constant(localeConfigurationClass ~ 'DEFAULT_LANGUAGE'),
         'country':  constant(localeConfigurationClass ~ 'DEFAULT_COUNTRY'),
-        'currency': constant(localeConfigurationClass ~ 'DEFAULT_CURRENCY')
+        'currency': constant(currencyConfigurationClass ~ 'DEFAULT_CURRENCY')
     } %}
 
     {% set settings = {
