CRM-6696: implement review notes

--- a/Resources/views/locale_settings.html.twig
+++ b/Resources/views/locale_settings.html.twig
@@ -69,6 +69,7 @@ function($, localeSettings) {
                 'abbreviated': oro_calendar_day_of_week_names('abbreviated'),
                 'short':       oro_calendar_day_of_week_names('short'),
                 'narrow':      oro_calendar_day_of_week_names('narrow'),
+                'mnemonic':    {"1":"sunday","2":"monday","3":"tuesday","4":"wednesday","5":"thursday","6":"friday","7":"saturday"}
             },
             'months': {
                 'wide':        oro_calendar_month_names('wide'),
